fix alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -20,16 +20,18 @@ form {
 
 .row div{
     display: table;
-    width: 100%;
+    width: 10px;
     table-layout: fixed;
     margin-bottom: 10px;
-    margin-left: 25px;
+    margin-left: 10px;
     margin-right: 10px;
     display: table-cell;
     vertical-align: top;
-    width: 80%;
+    width: 10px;
     height: 26.25rem;
     margin: auto;
     background: black;
     top: 25px;
+    padding-left: 18px;
+    padding-right: 0px;
 }
